fix weekly view on mobile, was displaying both desktop and mobile view previously.

--- a/src/pages/WeeklyView/Weekly.css
+++ b/src/pages/WeeklyView/Weekly.css
@@ -98,7 +98,7 @@ main {
     display: flex;
   }
 
-  .desktop {
+  #weekly .desktop {
     display: none;
   }
 
